--- a/css/output.css
+++ b/css/output.css
@@ -854,18 +854,6 @@ select {
   top: 55px;
 }
 
-.top-\[50\%\] {
-  top: 50%;
-}
-
-.left-\[15px\] {
-  left: 15px;
-}
-
-.left-\[12\.5px\] {
-  left: 12.5px;
-}
-
 .isolate {
   isolation: isolate;
 }
@@ -1064,6 +1052,14 @@ select {
   height: 1.75rem;
 }
 
+.h-\[12\.5px\] {
+  height: 12.5px;
+}
+
+.h-\[15\.5px\] {
+  height: 15.5px;
+}
+
 .h-\[15px\] {
   height: 15px;
 }
@@ -1078,22 +1074,6 @@ select {
 
 .h-full {
   height: 100%;
-}
-
-.h-3 {
-  height: 0.75rem;
-}
-
-.h-\[14px\] {
-  height: 14px;
-}
-
-.h-\[12\.5px\] {
-  height: 12.5px;
-}
-
-.h-\[15\.5px\] {
-  height: 15.5px;
 }
 
 .min-h-full {
@@ -1136,6 +1116,14 @@ select {
   width: 1.5rem;
 }
 
+.w-\[12\.5px\] {
+  width: 12.5px;
+}
+
+.w-\[15\.5px\] {
+  width: 15.5px;
+}
+
 .w-auto {
   width: auto;
 }
@@ -1146,30 +1134,6 @@ select {
 
 .w-screen {
   width: 100vw;
-}
-
-.w-10 {
-  width: 2.5rem;
-}
-
-.w-3 {
-  width: 0.75rem;
-}
-
-.w-\[15px\] {
-  width: 15px;
-}
-
-.w-\[14px\] {
-  width: 14px;
-}
-
-.w-\[12\.5px\] {
-  width: 12.5px;
-}
-
-.w-\[15\.5px\] {
-  width: 15.5px;
 }
 
 .min-w-0 {
@@ -1495,6 +1459,10 @@ select {
   border-color: rgb(187 247 208 / var(--tw-border-opacity));
 }
 
+.border-slate-900\/10 {
+  border-color: rgb(15 23 42 / 0.1);
+}
+
 .border-transparent {
   border-color: transparent;
 }
@@ -1502,10 +1470,6 @@ select {
 .border-yellow-200 {
   --tw-border-opacity: 1;
   border-color: rgb(254 240 138 / var(--tw-border-opacity));
-}
-
-.border-slate-900\/10 {
-  border-color: rgb(15 23 42 / 0.1);
 }
 
 .bg-blue-100 {
@@ -1548,6 +1512,11 @@ select {
   background-color: rgb(243 232 255 / var(--tw-bg-opacity));
 }
 
+.bg-slate-900 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(15 23 42 / var(--tw-bg-opacity));
+}
+
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
@@ -1558,9 +1527,14 @@ select {
   background-color: rgb(254 249 195 / var(--tw-bg-opacity));
 }
 
-.bg-gray-900 {
+.bg-gray-500 {
   --tw-bg-opacity: 1;
-  background-color: rgb(17 24 39 / var(--tw-bg-opacity));
+  background-color: rgb(107 114 128 / var(--tw-bg-opacity));
+}
+
+.bg-gray-300 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(209 213 219 / var(--tw-bg-opacity));
 }
 
 .bg-opacity-80 {
@@ -1751,6 +1725,10 @@ select {
   font-size: .5rem;
 }
 
+.text-\[\.625rem\] {
+  font-size: .625rem;
+}
+
 .text-\[\.65rem\] {
   font-size: .65rem;
 }
@@ -1773,10 +1751,6 @@ select {
 .text-xs {
   font-size: 0.75rem;
   line-height: 1rem;
-}
-
-.text-\[\.625rem\] {
-  font-size: .625rem;
 }
 
 .font-bold {
@@ -1999,6 +1973,10 @@ select {
   transition-duration: 150ms;
 }
 
+.duration-100 {
+  transition-duration: 100ms;
+}
+
 .duration-200 {
   transition-duration: 200ms;
 }
@@ -2009,10 +1987,6 @@ select {
 
 .duration-500 {
   transition-duration: 500ms;
-}
-
-.duration-100 {
-  transition-duration: 100ms;
 }
 
 .ease-in {
@@ -2067,6 +2041,11 @@ select {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
+.hover\:bg-slate-400:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(148 163 184 / var(--tw-bg-opacity));
+}
+
 .hover\:text-gray-500:hover {
   --tw-text-opacity: 1;
   color: rgb(107 114 128 / var(--tw-text-opacity));
@@ -2103,15 +2082,15 @@ select {
   outline-offset: 0px;
 }
 
-.focus\:ring-2:focus {
-  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
-  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color);
-  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
-}
-
 .focus\:ring-1:focus {
   --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
   --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(1px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+}
+
+.focus\:ring-2:focus {
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color);
   box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
 }
 
@@ -2127,10 +2106,6 @@ select {
 .focus\:ring-indigo-600:focus {
   --tw-ring-opacity: 1;
   --tw-ring-color: rgb(79 70 229 / var(--tw-ring-opacity));
-}
-
-.focus\:ring-offset-2:focus {
-  --tw-ring-offset-width: 2px;
 }
 
 .focus\:ring-offset-1:focus {
@@ -2306,14 +2281,6 @@ select {
     margin-left: 1rem;
   }
 
-  .md\:mt-0 {
-    margin-top: 0px;
-  }
-
-  .md\:flex {
-    display: flex;
-  }
-
   .md\:flex-row {
     flex-direction: row;
   }
@@ -2380,23 +2347,9 @@ select {
   border-color: rgb(203 213 225 / 0.1);
 }
 
-.dark\:bg-gray-900:where(.dark, .dark *) {
-  --tw-bg-opacity: 1;
-  background-color: rgb(17 24 39 / var(--tw-bg-opacity));
-}
-
-.dark\:bg-white:where(.dark, .dark *) {
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
 .dark\:bg-slate-800:where(.dark, .dark *) {
   --tw-bg-opacity: 1;
   background-color: rgb(30 41 59 / var(--tw-bg-opacity));
-}
-
-.dark\:bg-transparent:where(.dark, .dark *) {
-  background-color: transparent;
 }
 
 .dark\:bg-slate-900:where(.dark, .dark *) {
@@ -2404,42 +2357,13 @@ select {
   background-color: rgb(15 23 42 / var(--tw-bg-opacity));
 }
 
-.dark\:bg-slate-950:where(.dark, .dark *) {
+.dark\:bg-transparent:where(.dark, .dark *) {
+  background-color: transparent;
+}
+
+.dark\:bg-white:where(.dark, .dark *) {
   --tw-bg-opacity: 1;
-  background-color: rgb(2 6 23 / var(--tw-bg-opacity));
-}
-
-.dark\:bg-slate-900\/10:where(.dark, .dark *) {
-  background-color: rgb(15 23 42 / 0.1);
-}
-
-.dark\:bg-indigo-600:where(.dark, .dark *) {
-  --tw-bg-opacity: 1;
-  background-color: rgb(79 70 229 / var(--tw-bg-opacity));
-}
-
-.dark\:bg-slate-300\/10:where(.dark, .dark *) {
-  background-color: rgb(203 213 225 / 0.1);
-}
-
-.dark\:bg-slate-400:where(.dark, .dark *) {
-  --tw-bg-opacity: 1;
-  background-color: rgb(148 163 184 / var(--tw-bg-opacity));
-}
-
-.dark\:text-gray-400:where(.dark, .dark *) {
-  --tw-text-opacity: 1;
-  color: rgb(156 163 175 / var(--tw-text-opacity));
-}
-
-.dark\:text-white:where(.dark, .dark *) {
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
-.dark\:text-gray-500:where(.dark, .dark *) {
-  --tw-text-opacity: 1;
-  color: rgb(107 114 128 / var(--tw-text-opacity));
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
 .dark\:text-slate-400:where(.dark, .dark *) {
@@ -2450,6 +2374,21 @@ select {
 .dark\:text-slate-600:where(.dark, .dark *) {
   --tw-text-opacity: 1;
   color: rgb(71 85 105 / var(--tw-text-opacity));
+}
+
+.dark\:text-white:where(.dark, .dark *) {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.dark\:text-slate-900:where(.dark, .dark *) {
+  --tw-text-opacity: 1;
+  color: rgb(15 23 42 / var(--tw-text-opacity));
+}
+
+.dark\:text-gray-300:where(.dark, .dark *) {
+  --tw-text-opacity: 1;
+  color: rgb(209 213 219 / var(--tw-text-opacity));
 }
 
 .dark\:ring-0:where(.dark, .dark *) {
@@ -2468,47 +2407,13 @@ select {
   --tw-ring-inset: inset;
 }
 
-.dark\:ring-slate-400:where(.dark, .dark *) {
-  --tw-ring-opacity: 1;
-  --tw-ring-color: rgb(148 163 184 / var(--tw-ring-opacity));
-}
-
-.dark\:ring-indigo-600:where(.dark, .dark *) {
-  --tw-ring-opacity: 1;
-  --tw-ring-color: rgb(79 70 229 / var(--tw-ring-opacity));
-}
-
 .dark\:ring-slate-600:where(.dark, .dark *) {
   --tw-ring-opacity: 1;
   --tw-ring-color: rgb(71 85 105 / var(--tw-ring-opacity));
 }
 
-.dark\:hover\:bg-slate-100:hover:where(.dark, .dark *) {
-  --tw-bg-opacity: 1;
-  background-color: rgb(241 245 249 / var(--tw-bg-opacity));
-}
-
-.dark\:hover\:bg-slate-900:hover:where(.dark, .dark *) {
-  --tw-bg-opacity: 1;
-  background-color: rgb(15 23 42 / var(--tw-bg-opacity));
-}
-
-.dark\:hover\:bg-slate-800:hover:where(.dark, .dark *) {
-  --tw-bg-opacity: 1;
-  background-color: rgb(30 41 59 / var(--tw-bg-opacity));
-}
-
-.dark\:hover\:bg-slate-800\/10:hover:where(.dark, .dark *) {
-  background-color: rgb(30 41 59 / 0.1);
-}
-
-.dark\:hover\:bg-slate-900\/10:hover:where(.dark, .dark *) {
-  background-color: rgb(15 23 42 / 0.1);
-}
-
-.dark\:hover\:bg-slate-700:hover:where(.dark, .dark *) {
-  --tw-bg-opacity: 1;
-  background-color: rgb(51 65 85 / var(--tw-bg-opacity));
+.dark\:ring-slate-300\/10:where(.dark, .dark *) {
+  --tw-ring-color: rgb(203 213 225 / 0.1);
 }
 
 .dark\:hover\:bg-slate-600:hover:where(.dark, .dark *) {
@@ -2516,9 +2421,39 @@ select {
   background-color: rgb(71 85 105 / var(--tw-bg-opacity));
 }
 
-.dark\:hover\:text-white:hover:where(.dark, .dark *) {
+.dark\:hover\:bg-slate-800:hover:where(.dark, .dark *) {
+  --tw-bg-opacity: 1;
+  background-color: rgb(30 41 59 / var(--tw-bg-opacity));
+}
+
+.dark\:hover\:bg-slate-900:hover:where(.dark, .dark *) {
+  --tw-bg-opacity: 1;
+  background-color: rgb(15 23 42 / var(--tw-bg-opacity));
+}
+
+.dark\:hover\:bg-white:hover:where(.dark, .dark *) {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.dark\:hover\:bg-slate-400:hover:where(.dark, .dark *) {
+  --tw-bg-opacity: 1;
+  background-color: rgb(148 163 184 / var(--tw-bg-opacity));
+}
+
+.dark\:hover\:bg-slate-300:hover:where(.dark, .dark *) {
+  --tw-bg-opacity: 1;
+  background-color: rgb(203 213 225 / var(--tw-bg-opacity));
+}
+
+.dark\:hover\:bg-slate-500:hover:where(.dark, .dark *) {
+  --tw-bg-opacity: 1;
+  background-color: rgb(100 116 139 / var(--tw-bg-opacity));
+}
+
+.dark\:hover\:text-slate-400:hover:where(.dark, .dark *) {
   --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
+  color: rgb(148 163 184 / var(--tw-text-opacity));
 }
 
 .dark\:hover\:text-slate-600:hover:where(.dark, .dark *) {
@@ -2526,9 +2461,9 @@ select {
   color: rgb(71 85 105 / var(--tw-text-opacity));
 }
 
-.dark\:hover\:text-slate-400:hover:where(.dark, .dark *) {
+.dark\:hover\:text-white:hover:where(.dark, .dark *) {
   --tw-text-opacity: 1;
-  color: rgb(148 163 184 / var(--tw-text-opacity));
+  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
 .dark\:hover\:underline:hover:where(.dark, .dark *) {
