--- a/css/output.css
+++ b/css/output.css
@@ -1409,6 +1409,10 @@ select {
   border-radius: 0.75rem;
 }
 
+.rounded {
+  border-radius: 0.25rem;
+}
+
 .rounded-l-md {
   border-top-left-radius: 0.375rem;
   border-bottom-left-radius: 0.375rem;
@@ -1487,6 +1491,11 @@ select {
   background-color: rgb(229 231 235 / var(--tw-bg-opacity));
 }
 
+.bg-gray-300 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(209 213 219 / var(--tw-bg-opacity));
+}
+
 .bg-gray-50 {
   --tw-bg-opacity: 1;
   background-color: rgb(249 250 251 / var(--tw-bg-opacity));
@@ -1525,16 +1534,6 @@ select {
 .bg-yellow-100 {
   --tw-bg-opacity: 1;
   background-color: rgb(254 249 195 / var(--tw-bg-opacity));
-}
-
-.bg-gray-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(107 114 128 / var(--tw-bg-opacity));
-}
-
-.bg-gray-300 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(209 213 219 / var(--tw-bg-opacity));
 }
 
 .bg-opacity-80 {
@@ -1706,6 +1705,10 @@ select {
 
 .pt-\[85px\] {
   padding-top: 85px;
+}
+
+.pt-4 {
+  padding-top: 1rem;
 }
 
 .text-left {
@@ -2041,11 +2044,6 @@ select {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.hover\:bg-slate-400:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(148 163 184 / var(--tw-bg-opacity));
-}
-
 .hover\:text-gray-500:hover {
   --tw-text-opacity: 1;
   color: rgb(107 114 128 / var(--tw-text-opacity));
@@ -2343,6 +2341,14 @@ select {
   border-color: rgb(203 213 225 / 0.1);
 }
 
+.dark\:border-b:where(.dark, .dark *) {
+  border-bottom-width: 1px;
+}
+
+.dark\:border-t:where(.dark, .dark *) {
+  border-top-width: 1px;
+}
+
 .dark\:border-slate-300\/10:where(.dark, .dark *) {
   border-color: rgb(203 213 225 / 0.1);
 }
@@ -2366,6 +2372,11 @@ select {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
+.dark\:text-gray-300:where(.dark, .dark *) {
+  --tw-text-opacity: 1;
+  color: rgb(209 213 219 / var(--tw-text-opacity));
+}
+
 .dark\:text-slate-400:where(.dark, .dark *) {
   --tw-text-opacity: 1;
   color: rgb(148 163 184 / var(--tw-text-opacity));
@@ -2376,19 +2387,14 @@ select {
   color: rgb(71 85 105 / var(--tw-text-opacity));
 }
 
-.dark\:text-white:where(.dark, .dark *) {
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
 .dark\:text-slate-900:where(.dark, .dark *) {
   --tw-text-opacity: 1;
   color: rgb(15 23 42 / var(--tw-text-opacity));
 }
 
-.dark\:text-gray-300:where(.dark, .dark *) {
+.dark\:text-white:where(.dark, .dark *) {
   --tw-text-opacity: 1;
-  color: rgb(209 213 219 / var(--tw-text-opacity));
+  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
 .dark\:ring-0:where(.dark, .dark *) {
@@ -2407,13 +2413,18 @@ select {
   --tw-ring-inset: inset;
 }
 
+.dark\:ring-slate-300\/10:where(.dark, .dark *) {
+  --tw-ring-color: rgb(203 213 225 / 0.1);
+}
+
 .dark\:ring-slate-600:where(.dark, .dark *) {
   --tw-ring-opacity: 1;
   --tw-ring-color: rgb(71 85 105 / var(--tw-ring-opacity));
 }
 
-.dark\:ring-slate-300\/10:where(.dark, .dark *) {
-  --tw-ring-color: rgb(203 213 225 / 0.1);
+.dark\:hover\:bg-slate-500:hover:where(.dark, .dark *) {
+  --tw-bg-opacity: 1;
+  background-color: rgb(100 116 139 / var(--tw-bg-opacity));
 }
 
 .dark\:hover\:bg-slate-600:hover:where(.dark, .dark *) {
@@ -2434,21 +2445,6 @@ select {
 .dark\:hover\:bg-white:hover:where(.dark, .dark *) {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
-.dark\:hover\:bg-slate-400:hover:where(.dark, .dark *) {
-  --tw-bg-opacity: 1;
-  background-color: rgb(148 163 184 / var(--tw-bg-opacity));
-}
-
-.dark\:hover\:bg-slate-300:hover:where(.dark, .dark *) {
-  --tw-bg-opacity: 1;
-  background-color: rgb(203 213 225 / var(--tw-bg-opacity));
-}
-
-.dark\:hover\:bg-slate-500:hover:where(.dark, .dark *) {
-  --tw-bg-opacity: 1;
-  background-color: rgb(100 116 139 / var(--tw-bg-opacity));
 }
 
 .dark\:hover\:text-slate-400:hover:where(.dark, .dark *) {
